--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Bounce Friends</h1>
+              <h1>Gimle Games</h1>
               <span class="subheading">A Dev Blog by Gimle Games</span>
             </div>
           </div>
