--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Gimle Games</h1>
-              <span class="subheading">A Dev Blog by Gimle Games</span>
+              <h1>Game Dev</h1>
+              <span class="subheading">A Dev Blog by gimlegames.github.io</span>
             </div>
           </div>
         </div>
