--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
+    
+    <!-- 폰에서 홈화면에 즐겨찾기를 할때 앱처럼 보이게끔 하는 아이콘 설정 -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="./images/apple-touch-icon.png" sizes="192x192">
 
   </head>
 
