--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/bgcolor.jpg')">
+    <header class="masthead" style="background-image: url('img/game1.jpg')">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Game Dev</h1>
-              <span class="subheading">A Dev Blog by gimlegames.github.io</span>
+              <h1>Bounce Friends</h1>
+              <span class="subheading">Jump Rope in Fantasy World</span>
             </div>
           </div>
         </div>
