--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="css/clean-blog.css" rel="stylesheet">
     
     <!-- 폰에서 홈화면에 즐겨찾기를 할때 앱처럼 보이게끔 하는 아이콘 설정 -->
     <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png" />
@@ -57,7 +57,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/game1.jpg')">
+    <header class="masthead" style="background-image: url('img/bgcolor.jpg')">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
